test/org/midica/testfiles/failing/eff-flow-pending-1.midica
INCLUDE inc/instruments.midica


0: vol.wait
1: c
